<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/category_bg">

    <!-- Included header.xml here -->


    <ViewStub
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout="@layout/header"
        android:inflatedId="@+id/header"
        android:id="@+id/vsHeader"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:padding="6dip">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
            <Button
                android:id="@+id/Bengali"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/ben"
                android:textColor="#000"/>

            <Button
                android:id="@+id/Devanagari"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/sans"
                android:textColor="#000" />

            <Button
                android:id="@+id/English"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/eng"
                android:textColor="#000"/>

        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/Gujarathi"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/guj"
                android:textColor="#000"/>

            <Button
                android:id="@+id/hindi"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/hin"
                android:textColor="#000"/>

            <Button
                android:id="@+id/Kannada"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/kan"
                android:textColor="#000"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/Malayalam"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/mal"
                android:textColor="#000"/>

            <Button
                android:id="@+id/Tamil"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/tam"
                android:textColor="#000"/>

            <Button
                android:id="@+id/Telugu"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onButtonClicker"
                android:text="@string/tel"
                android:textColor="#000"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>